==> acha666/esp32-h2-air-sensor/components/bq27426/bq27426.cpp <==
#include "bq27426.h"
#include "bq27426_defs.h"
#include "driver/i2c_master.h"
#include "freertos/FreeRTOS.h"
#include "esp_log.h"
#include "string.h"
#define constrain(amt, low, high) ((amt) < (low) ? (low) : ((amt) > (high) ? (high) : (amt)))
#define TAG "BQ27426"

esp_err_t BQ27426::begin(i2c_master_bus_handle_t i2c_master_bus, uint8_t address)
{

    esp_err_t ret;
    uint16_t deviceID = 0;

    _i2cBus = i2c_master_bus;

    ret = i2c_master_probe(_i2cBus, address, 500); // check if the device is connected
    ESP_LOGI(TAG, "Probe result: %d", ret);

    i2c_device_config_t dev_cfg = {
        .dev_addr_length = I2C_ADDR_BIT_LEN_7,
        .device_address = address,
        .scl_speed_hz = 100000,
    };
    ret = i2c_master_bus_add_device(_i2cBus, &dev_cfg, &_i2cDevice);
    if (ret != ESP_OK)
    {
        return ret;
    }

    deviceID = deviceType(); // Read deviceType from BQ27426
    ESP_LOGI(TAG, "Device ID: 0x%04X", deviceID);

    if (deviceID == BQ27426_DEVICE_ID)
    {
        return ESP_OK; // If device ID is valid, return true
    }

    return ESP_ERR_INVALID_RESPONSE; // Otherwise return false
}

int16_t BQ27426::i2cReadBytes(uint8_t subAddress, uint8_t *dest, uint8_t count)
{

    return i2c_master_transmit_receive(_i2cDevice, &subAddress, 1, dest, count, _timeout);
}

uint16_t BQ27426::i2cWriteBytes(uint8_t subAddress, uint8_t *src, uint8_t count)
{
    uint8_t write_size = 1 + count;
    uint8_t write_buffer[write_size];
    memcpy(write_buffer, &subAddress, 1);
    memcpy(write_buffer + 1, src, count);

    return i2c_master_transmit(_i2cDevice, write_buffer, write_size, _timeout);
}
